--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3078,7 +3078,7 @@
 
 .slick-slide {
   float: left;
-  height: auto;
+  height: 100%;
   min-height: 1px;
   display: none; }
   [dir="rtl"] .slick-slide {
@@ -3180,7 +3180,7 @@
 
 .slick-dots {
   position: absolute;
-  bottom: -50px;
+  bottom: -25px;
   list-style: none;
   display: block;
   text-align: center;
@@ -3205,7 +3205,7 @@
       line-height: 0px;
       font-size: 0px;
       color: transparent;
-      padding: 3px;
+      padding: 5px;
       cursor: pointer; }
       .slick-dots li button:hover, .slick-dots li button:focus {
         outline: none; }
@@ -3215,19 +3215,19 @@
         position: absolute;
         top: 0;
         left: 0;
-        content: "■";
+        content: "•";
         width: 20px;
         height: 20px;
         font-family: "slick";
-        font-size: 26px;
+        font-size: 6px;
         line-height: 20px;
         text-align: center;
-        color: #92afd7;
+        color: black;
         opacity: 0.25;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale; }
     .slick-dots li.slick-active button:before {
-      color: #383b53;
+      color: black;
       opacity: 0.75; }
 
 .center {
@@ -3263,6 +3263,13 @@ body {
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out; }
 
+/* Horizontal Scrolling Flex */
+.horizontal {
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto; }
+
+/* Images & Heros */
 .bg-image {
   background-size: cover;
   background-position: center;
@@ -3491,10 +3498,10 @@ input, textarea {
 .button-white {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  border-radius: 50px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px;
   -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
   -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
   -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
@@ -3530,10 +3537,10 @@ input, textarea {
 .button-outline {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  border-radius: 50px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px;
   -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
   -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
   -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
@@ -3571,10 +3578,10 @@ input, textarea {
 .button-secondary {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  border-radius: 50px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px;
   background: #92afd7;
   padding: 15px 50px;
   position: relative;
@@ -3605,10 +3612,10 @@ input, textarea {
 .button {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  -ms-border-radius: 50px;
-  border-radius: 50px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  border-radius: 6px;
   padding: 15px 50px;
   position: relative;
   border: none;
@@ -3668,9 +3675,6 @@ input, textarea {
 
 .relative {
   position: relative; }
-
-.no-overflow {
-  overflow: hidden; }
 
 .rise {
   -webkit-transition: all .5s ease-in-out;
@@ -3784,6 +3788,18 @@ i.material-icons {
 
 .no-bottom-padding {
   padding-bottom: 0 !important; }
+
+.no-top-padding {
+  padding-top: 0 !important; }
+
+.no-left-padding {
+  padding-left: 0 !important; }
+
+.no-right-padding {
+  padding-right: 0 !important; }
+
+.no-overflow {
+  overflow: hidden; }
 
 .xs-padding {
   padding: 10px; }
