--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0; }
 
-.primary-color {
+.primary {
   color: #383b53; }
 
 .primary-bg {
@@ -18,31 +18,31 @@
 .secondary-bg {
   background: #92afd7; }
 
-.light-grey-color {
+.light-grey {
   color: #f7f5f7; }
 
 .light-grey-bg {
   background: #f7f5f7; }
 
-.grey-color {
+.grey {
   color: #eeeeee; }
 
 .grey-bg {
   background: #eeeeee; }
 
-.bright-color {
+.bright {
   color: #ff6acf; }
 
 .bright-bg {
   background: #ff6acf; }
 
-.dark-color {
+.dark {
   color: #04080f; }
 
 .dark-bg {
   background: #04080f; }
 
-.white-color {
+.white {
   color: #fff; }
 
 .white-bg {
@@ -3351,7 +3351,7 @@ body {
 h2, h3 {
   margin: 1.3 0 0.5em;
   line-height: 1.15em;
-  font-family: 'Permanent Marker';
+  font-family: 'Montserrat';
   width: 100%; }
 
 h4, h5, h6 {
@@ -3364,7 +3364,7 @@ h4, h5, h6 {
 h1 {
   font-size: 4.7em;
   line-height: 1em;
-  font-family: 'Permanent Marker'; }
+  font-family: 'Montserrat'; }
 
 h2 {
   font-size: 2.5em;
