--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,19 +21,19 @@ $white: #ffffff;
 
 * { padding: 0; margin: 0; }
 
-.primary-color{color:$primary;}
+.primary{color:$primary;}
 .primary-bg{background: $primary;}
 .secondary{color:$secondary;}
 .secondary-bg{background: $secondary;}
-.light-grey-color{color:$light-grey;}
+.light-grey{color:$light-grey;}
 .light-grey-bg{background:$light-grey;}
-.grey-color{color:$grey;}
+.grey{color:$grey;}
 .grey-bg{background:$grey;}
-.bright-color{color:$bright;}
+.bright{color:$bright;}
 .bright-bg{background:$bright;}
-.dark-color{color:$dark;}
+.dark{color:$dark;}
 .dark-bg{background:$dark;}
-.white-color{color:#fff;}
+.white{color:#fff;}
 .white-bg{background:#fff;}
 
 /* fonts */
@@ -225,7 +225,7 @@ body {
 h2, h3 {
   margin: 1.3 0 0.5em;
     line-height: 1.15em;
-  font-family: 'Permanent Marker';
+  font-family: 'Montserrat';
   width: 100%;}
 h4, h5, h6, {
   color: $primary;
@@ -236,7 +236,7 @@ h4, h5, h6, {
 h1 {
   font-size: 4.7em;
     line-height: 1em;
-  font-family: 'Permanent Marker';}
+  font-family: 'Montserrat';}
 h2 {
   font-size: 2.5em;
     font-weight: 200;}
