--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3300,53 +3300,6 @@ body {
   background-position: bottom center;
   background-size: contain; }
 
-/* navigation */
-.nav {
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  position: fixed;
-  top: 0;
-  z-index: 2;
-  height: 50px;
-  display: flex;
-  justify-content: space-around;
-  background: rgba(255, 255, 255, 0); }
-  .nav a {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    color: #ffffff;
-    padding: 0;
-    background: rgba(255, 255, 255, 0); }
-  .nav a:hover {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    color: #383b53 !important;
-    padding: 5px 10px;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    -ms-border-radius: 6px;
-    border-radius: 6px;
-    background: white; }
-
-.nav-link {
-  padding: 8px 20px;
-  margin: auto;
-  text-transform: capitalize; }
-
-.scrolled {
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  background: rgba(255, 255, 255, 0.95);
-  box-shadow: 0px 2px 25px rgba(4, 8, 15, 0.05); }
-  .scrolled a {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    color: #92afd7 !important; }
-  .scrolled a:hover {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    color: #ff6acf !important; }
-
 /* text and headers */
 h2, h3 {
   margin: 1.3 0 0.5em;
@@ -3401,10 +3354,18 @@ h5 {
 .italic {
   font-style: italic; }
 
+.main-menu a {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  font-size: 2em; }
+.main-menu a:hover {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out; }
+
 a {
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  color: #383b53;
+  color: #ff6acf;
   font-weight: 600;
   font-size: inherit;
   text-decoration: none; }
@@ -3781,11 +3742,26 @@ i.material-icons {
   align-content: flex-end;
   text-align: right; }
 
-.no-padding {
-  padding: 0 !important; }
-
 .no-margin {
   margin: 0 !important; }
+
+.xs-margin {
+  margin: 10px; }
+
+.sm-margin {
+  margin: 20px; }
+
+.md-margin {
+  margin: 50px; }
+
+.lg-margin {
+  margin: 100px; }
+
+.xl-margin {
+  margin: 160px; }
+
+.no-padding {
+  padding: 0 !important; }
 
 .no-bottom-padding {
   padding-bottom: 0 !important; }
