--- a/assets/css/fullpage.css
+++ b/assets/css/fullpage.css
@@ -59,8 +59,8 @@ html.fp-enabled,
     -khtml-user-select: none; /* webkit (konqueror) browsers */
     -ms-user-select: none; /* IE10+ */
     position: absolute;
-    z-index: 4;
-    top: 50%;
+    z-index: 10000;
+    bottom: 5%;
     cursor: pointer;
     width: 0;
     height: 0;
@@ -69,16 +69,20 @@ html.fp-enabled,
     -webkit-transform: translate3d(0,0,0);
     -ms-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
+    opacity: .37;
+}
+.fp-controlArrow.fp-prev:hover, .fp-controlArrow.fp-next:hover {
+    opacity: 1 !important;
 }
 .fp-controlArrow.fp-prev {
-    left: 15px;
+    left: 25px;
     width: 0;
-    border-width: 38.5px 34px 38.5px 0;
+    border-width: 10px 15px 10px 0;
     border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
-    right: 15px;
-    border-width: 38.5px 0 38.5px 34px;
+    right: 25px;
+    border-width: 10px 0 10px 15px;
     border-color: transparent transparent transparent #fff;
 }
 .fp-scrollable {
@@ -128,8 +132,8 @@ html.fp-enabled,
 }
 #fp-nav ul,
 .fp-slidesNav ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 #fp-nav ul li,
 .fp-slidesNav ul li {
@@ -160,6 +164,7 @@ html.fp-enabled,
     width: 12px;
     margin: -6px 0 0 -6px;
     border-radius: 100%;
+    background: #92afd7;
  }
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
@@ -186,15 +191,15 @@ html.fp-enabled,
 }
 #fp-nav ul li .fp-tooltip {
     position: absolute;
-    top: -2px;
-    color: #fff;
-    font-size: 14px;
-    font-family: arial, helvetica, sans-serif;
+    top: -6px;
+    color: #eee;
+    font-size: 3em;
+    font-family: 'Source Sans Pro', Open Sans, Helvetica, Arial, sans-serif;
     white-space: nowrap;
     max-width: 220px;
     overflow: hidden;
     display: block;
-    opacity: 0;
+    opacity: .2;
     width: 0;
     cursor: pointer;
 }
@@ -206,10 +211,10 @@ html.fp-enabled,
     opacity: 1;
 }
 #fp-nav ul li .fp-tooltip.fp-right {
-    right: 20px;
+    right: 30px;
 }
 #fp-nav ul li .fp-tooltip.fp-left {
-    left: 20px;
+    left: 30px;
 }
 .fp-auto-height.fp-section,
 .fp-auto-height .fp-slide,
