--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3358,7 +3358,7 @@ h5 {
   max-width: 600;
   list-style-type: none !important; }
 
-.main-menu a {
+.main-menu li a {
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
   font-size: 2.5em;
@@ -3371,12 +3371,11 @@ h5 {
   transition: all .5s ease-in-out;
   color: #ff6acf;
   opacity: 1; }
-.main-menu li.active a {
+.main-menu .active-styles {
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  color: #ffffff;
   opacity: 1;
-  font-size: 4.5em; }
+  font-size: 4.75em; }
 
 a {
   -webkit-transition: all .5s ease-in-out;
