--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -196,22 +196,27 @@ h4, h5, h6, {
   font-weight:700;
   width: 100%;}
 h1 {
-  font-size: 4.7em;
-    line-height: 1em;
-  font-family: 'Montserrat';}
+    font-size: 4em;
+    line-height: 1.5em;
+    font-family: 'Montserrat';
+}
 h2 {
   font-size: 2.5em;
-    font-weight: 200;}
+    font-weight: 200;
+}
 h3 {
   font-size: 1.414em/*1.999em*/;
   font-weight: 800;
-  text-transform: uppercase;}
+  text-transform: uppercase;
+}
 h4 {
   font-size: 1.414em;
-  font-weight: 600;}
+  font-weight: 600;
+}
 h5 {
   font-size: 1em;
-  font-weight: 600;}
+  font-weight: 600;
+}
 .sm-text {
   font-size: 0.8em !important;}
 .xl-text {
