--- a/assets/css/fullpage.css
+++ b/assets/css/fullpage.css
@@ -75,13 +75,13 @@ html.fp-enabled,
     opacity: 1 !important;
 }
 .fp-controlArrow.fp-prev {
-    left: 25px;
+    right: 80px;
     width: 0;
     border-width: 10px 15px 10px 0;
     border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
-    right: 25px;
+    right: 40px;
     border-width: 10px 0 10px 15px;
     border-color: transparent transparent transparent #fff;
 }
@@ -120,15 +120,14 @@ html.fp-enabled,
     -webkit-transform: translate3d(0,0,0);
     -ms-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
-    left: 0 !important;
-    right: 0;
+    right: 120px !important;
     margin: 0 auto !important;
 }
 .fp-slidesNav.fp-bottom {
-    bottom: 17px;
+    bottom: 26px;
 }
 .fp-slidesNav.fp-top {
-    top: 17px;
+    top: 26px;
 }
 #fp-nav ul,
 .fp-slidesNav ul {
