--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3305,23 +3305,22 @@ h2, h3 {
   margin: 1.3 0 0.5em;
   line-height: 1.15em;
   font-family: 'Montserrat';
+  font-weight: 700;
   width: 100%; }
 
 h4, h5, h6 {
   color: #383b53;
   margin: 1.3 0 0.5em;
   line-height: 1.15em;
-  font-weight: 700;
   width: 100%; }
 
 h1 {
-  font-size: 4.7em;
-  line-height: 1em;
+  font-size: 4em;
+  line-height: 1.5em;
   font-family: 'Montserrat'; }
 
 h2 {
-  font-size: 2.5em;
-  font-weight: 200; }
+  font-size: 2.5em; }
 
 h3 {
   font-size: 1.414em;
@@ -3355,26 +3354,28 @@ h5 {
   font-style: italic; }
 
 #menu {
-  max-width: 600;
-  list-style-type: none !important; }
-
-.main-menu li a {
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  font-size: 4em;
-  line-height: 1.5em;
-  padding: 10px 20px;
-  color: #ffffff;
-  opacity: .5; }
-.main-menu a:hover {
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  color: #ff6acf;
-  opacity: 1; }
-.main-menu .active-styles {
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  opacity: 1; }
+  list-style-type: none !important;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000; }
+  #menu li a {
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    font-size: 1em;
+    line-height: 1.5em;
+    padding: 10px 20px;
+    color: #ffffff;
+    opacity: .37; }
+  #menu li a:hover {
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    color: #ff6acf;
+    opacity: 1; }
+  #menu li.active a {
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    opacity: 1; }
 
 a {
   -webkit-transition: all .5s ease-in-out;
