--- a/assets/css/fullpage.css
+++ b/assets/css/fullpage.css
@@ -78,12 +78,12 @@ html.fp-enabled,
     right: 80px;
     width: 0;
     border-width: 10px 15px 10px 0;
-    border-color: transparent #fff transparent transparent;
+    border-color: transparent #000 transparent transparent;
 }
 .fp-controlArrow.fp-next {
     right: 40px;
     border-width: 10px 0 10px 15px;
-    border-color: transparent transparent transparent #fff;
+    border-color: transparent transparent transparent #000;
 }
 .fp-scrollable {
     overflow: hidden;
@@ -163,7 +163,7 @@ html.fp-enabled,
     width: 12px;
     margin: -6px 0 0 -6px;
     border-radius: 100%;
-    background: #fff;
+    background: #000;
  }
 #fp-nav ul li a span,
 .fp-slidesNav ul li a span {
@@ -173,7 +173,7 @@ html.fp-enabled,
     height: 4px;
     width: 4px;
     border: 0;
-    background: rgba(255,255,255,0.3);
+    background: rgba(0,0,0,0.3);
     left: 50%;
     top: 50%;
     margin: -2px 0 0 -2px;
@@ -191,7 +191,7 @@ html.fp-enabled,
 #fp-nav ul li .fp-tooltip {
     position: absolute;
     top: -6px;
-    color: #eee;
+    color: #ff6acf;
     font-size: 10px;
     text-transform: uppercase;
     font-family: 'Source Sans Pro', Open Sans, Helvetica, Arial, sans-serif;
