--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,76 +47,95 @@ $white: #ffffff;
 @import "slick-theme";
 
 .center {
-    justify-content: center !important;}
+    justify-content: center !important;
+}
 
 @mixin border-radius {
   -webkit-border-radius: $radius;
      -moz-border-radius: $radius;
       -ms-border-radius: $radius;
-          border-radius: $radius;}
+          border-radius: $radius;
+}
 @mixin shadow {
   -webkit-box-shadow: $shadow;
      -moz-box-shadow: $shadow;
       -ms-box-shadow: $shadow;
-          box-shadow: $shadow;}
+          box-shadow: $shadow;
+}
 @mixin shadow-light {
   -webkit-box-shadow: $shadow-light;
      -moz-box-shadow: $shadow-light;
       -ms-box-shadow: $shadow-light;
-          box-shadow: $shadow-light;}
+          box-shadow: $shadow-light;
+}
 @mixin shadow-bright {
   -webkit-box-shadow: $shadow-bright;
      -moz-box-shadow: $shadow-bright;
       -ms-box-shadow: $shadow-bright;
-          box-shadow: $shadow-bright;}
+          box-shadow: $shadow-bright;
+}
 @mixin circle {
     -webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	-ms-border-radius: 50%;
-	border-radius: 50%;}
+	border-radius: 50%;
+}
 @mixin transition {
     -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;}
+    transition: all .5s ease-in-out;
+}
 @mixin slow-transition {
     -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;}
+    transition: all 1s ease-in-out;
+}
 @mixin fast-transition {
     -webkit-transition: all .25s ease-in-out;
-    transition: all .25s ease-in-out;}
+    transition: all .25s ease-in-out;
+}
 @mixin scale-zero {
     -webkit-transform: scale(0);
     -ms-transform: scale(0);
-    transform: scale(0);}
+    transform: scale(0);
+}
 @mixin scale-full {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
-    transform: scale(1);}
+    transform: scale(1);
+}
 @mixin delay {
     -webkit-transition-delay: 2s;
-    transition-delay: 2s;}
+    transition-delay: 2s;
+}
 @mixin undersized {
     -webkit-transform: scale(0.8) translate(-30%, -30%);
     -ms-transform: scale(0.8) translate(-30%, -30%);
-    transform: scale(0.8) translate(-30%, -30%);}
+    transform: scale(0.8) translate(-30%, -30%);
+}
 @mixin oversized {
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
-    transform: scale(1.2);}
+    transform: scale(1.2);
+}
 @mixin oversized-right {
     -ms-transform: translateX(40%) translateY(10%) scale(1.75); 
     -webkit-transform: translateX(40%) translateY(10%) scale(1.75); 
-    transform: translateX(40%) translateY(10%) scale(1.75);}
+    transform: translateX(40%) translateY(10%) scale(1.75);
+}
 @mixin oversized-left {
     -ms-transform: rotate(-10deg) scale(1.2); 
     -webkit-transform: rotate(-10deg) scale(1.2); 
-    transform: rotate(-10deg) scale(1.2);}
+    transform: rotate(-10deg) scale(1.2);
+}
 @mixin rise {
     position:relative;
     -ms-transform: translateY(-3px);
     -webkit-transform: translateY(-3px);
-    transform: translateY(-3px);}
+    transform: translateY(-3px);
+}
 @mixin opacity{
-    opacity: .6;}
+    opacity: .6;
+}
+
 
 body {
     font: 100% $fonts;
@@ -207,8 +226,7 @@ h2 {
 }
 h3 {
   font-size: 1.414em/*1.999em*/;
-  font-weight: 800;
-  text-transform: uppercase;
+  font-weight: 400;
 }
 h4 {
   font-size: 1.414em;
@@ -245,7 +263,7 @@ h5 {
         font-size: 1em;
         line-height: 1.5em;
         padding: 10px 20px;
-        color: $white;
+        color: $dark;
         opacity: .37;
         }
         a:hover {
@@ -631,40 +649,56 @@ i.material-icons {
 /* img sizes */
 .icon-10 {
     width: 10px;
-    height: 10px;}
+    height: 10px;
+}
 .icon-20 {
     width: 20px;
-    height: 20px;}
+    height: 20px;
+}
+.icon-30 {
+    width: 30px;
+    height: 30px;
+}
 .icon-40 {
     width: 40px;
-    height: 40px;}
+    height: 40px;
+}
 .icon-50 {
     width: 50px;
-    height: 50px;}
+    height: 50px;
+}
 .icon-60 {
     width: 60px;
-    height: 60px;}
+    height: 60px;
+}
 .icon-80 {
     width: 80px;
-    height: 80px;}
+    height: 80px;
+}
 .icon-100 {
     width: 100px;
-    height: 100px;}
+    height: 100px;
+}
 .icon-120 {
     width: 120px;
-    height: 120px;}
+    height: 120px;
+}
 .icon-140 {
     width: 140px;
-    height: 140px;}
+    height: 140px;
+}
 .icon-160 {
     width: 160px;
-    height: 160px;}
+    height: 160px;
+}
 .icon-180 {
     width: 180px;
-    height: 180px;}
+    height: 180px;
+}
 .icon-200 {
     width: 200px;
-    height: 200px;}
+    height: 200px;
+}
 #logo{
     max-width: 600px;
     margin: auto;
