--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,10 +13,10 @@
   background: #383b53; }
 
 .secondary {
-  color: #92afd7; }
+  color: #A8CDFF; }
 
 .secondary-bg {
-  background: #92afd7; }
+  background: #A8CDFF; }
 
 .light-grey {
   color: #f7f5f7; }
@@ -25,10 +25,10 @@
   background: #f7f5f7; }
 
 .grey {
-  color: #eeeeee; }
+  color: #949BA4; }
 
 .grey-bg {
-  background: #eeeeee; }
+  background: #949BA4; }
 
 .bright {
   color: #ff6acf; }
@@ -43,10 +43,16 @@
   background: #04080f; }
 
 .white {
-  color: #fff; }
+  color: #ffffff; }
 
 .white-bg {
-  background: #fff; }
+  background: #ffffff; }
+
+.black {
+  color: #000000; }
+
+.black-bg {
+  background: #000000; }
 
 /* fonts */
 /* import grid */
@@ -3249,7 +3255,7 @@ body {
 
 .footer {
   background: #04080f;
-  color: #92afd7;
+  color: #A8CDFF;
   position: relative;
   z-index: 1; }
   .footer a {
@@ -3315,6 +3321,7 @@ h4, h5, h6 {
   width: 100%; }
 
 h1 {
+  color: #000000;
   font-size: 4em;
   line-height: 1.5em;
   font-family: 'Montserrat'; }
@@ -3324,7 +3331,7 @@ h2 {
 
 h3 {
   font-size: 1.414em;
-  font-weight: 400; }
+  font-weight: 200; }
 
 h4 {
   font-size: 1.414em;
@@ -3352,6 +3359,9 @@ h5 {
 .italic {
   font-style: italic; }
 
+.underline {
+  border-bottom: 1px solid #383b53; }
+
 #menu {
   list-style-type: none !important;
   position: fixed;
@@ -3362,6 +3372,7 @@ h5 {
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
     font-size: 1em;
+    font-weight: 600;
     line-height: 1.5em;
     padding: 10px 20px;
     color: #04080f;
@@ -3374,20 +3385,21 @@ h5 {
   #menu li.active a {
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
-    opacity: 1; }
+    opacity: 1;
+    font-weight: 600; }
 
 a {
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  color: #ff6acf;
-  font-weight: 600;
+  color: #383b53;
   font-size: inherit;
   text-decoration: none; }
 
 a:hover {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  text-transform: underline; }
+  text-transform: underline;
+  color: #ff6acf !important; }
 
 a.tile:hover {
   position: relative;
@@ -3404,7 +3416,7 @@ a.tile:hover {
   background: #f7f5f7;
   border-radius: 20px; }
 #skills p.highlight {
-  background: #92afd7;
+  background: #A8CDFF;
   color: #ffffff; }
 
 #timeline img {
@@ -3427,13 +3439,13 @@ input, textarea {
 
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #92afd7;
+  color: #A8CDFF;
   opacity: 1;
   /* Firefox */ }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  color: #92afd7; }
+  color: #A8CDFF; }
 
 :focus {
   outline: -webkit-focus-ring-color auto;
@@ -3478,10 +3490,10 @@ input, textarea {
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   border-radius: 6px;
-  -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
+  -webkit-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   background: #ffffff;
   padding: 15px 50px;
   position: relative;
@@ -3494,15 +3506,15 @@ input, textarea {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  color: #92afd7 !important; }
+  color: #A8CDFF !important; }
 
 .button-white:hover {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
+  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
   position: relative;
   -ms-transform: translateY(-3px);
   -webkit-transform: translateY(-3px);
@@ -3517,10 +3529,10 @@ input, textarea {
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   border-radius: 6px;
-  -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
+  -webkit-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   background: rgba(255, 255, 255, 0);
   border: 1px solid #ffffff;
   padding: 15px 50px;
@@ -3539,10 +3551,10 @@ input, textarea {
 .button-outline:hover {
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
+  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
   position: relative;
   -ms-transform: translateY(-3px);
   -webkit-transform: translateY(-3px);
@@ -3558,7 +3570,7 @@ input, textarea {
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   border-radius: 6px;
-  background: #92afd7;
+  background: #A8CDFF;
   padding: 15px 50px;
   position: relative;
   top: 0;
@@ -3573,10 +3585,10 @@ input, textarea {
   color: #fff !important; }
 
 .button-secondary:hover {
-  -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
+  -webkit-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
   position: relative;
@@ -3607,10 +3619,10 @@ input, textarea {
   color: #fff !important; }
 
 .button:hover {
-  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
+  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
   position: relative;
@@ -3618,12 +3630,16 @@ input, textarea {
   -webkit-transform: translateY(-3px);
   transform: translateY(-3px); }
 
-/* items and misc styles */
+/* position and misc styles */
 .card {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   -ms-border-radius: 6px;
   border-radius: 6px;
+  -webkit-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   background: #fff; }
 
 .absolute {
@@ -3632,6 +3648,12 @@ input, textarea {
 
 .relative {
   position: relative; }
+
+.inline {
+  display: inline-block !important; }
+
+.z-index {
+  z-index: 10; }
 
 .rise {
   -webkit-transition: all .5s ease-in-out;
@@ -3659,13 +3681,10 @@ i.material-icons {
   border-bottom: solid 1px rgba(0, 0, 0, 0.15); }
 
 .border-left {
-  border-left: solid 1px #eeeeee; }
+  border-left: solid 1px #949BA4; }
 
 .border-right {
-  border-right: solid 1px #eeeeee; }
-
-.inline {
-  display: inline-block !important; }
+  border-right: solid 1px #949BA4; }
 
 .circle {
   -webkit-border-radius: 50%;
@@ -3674,16 +3693,16 @@ i.material-icons {
   border-radius: 50%; }
 
 .shadow {
-  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1);
-  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.1); }
+  -webkit-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -moz-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  -ms-box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2);
+  box-shadow: 0px 20px 30px rgba(56, 59, 83, 0.2); }
 
 .shadow-light {
-  -webkit-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -moz-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  -ms-box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4);
-  box-shadow: 0px 15px 30px rgba(146, 175, 215, 0.4); }
+  -webkit-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
+  box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1); }
 
 .opacity {
   opacity: .6; }
@@ -3851,11 +3870,19 @@ i.material-icons {
 /* margin lips */
 .lip-top {
   position: relative;
-  top: -200px !important; }
+  top: -100px !important; }
 
 .lip-bottom {
   position: relative;
   top: 100px !important; }
+
+.float-left {
+  position: relative;
+  float: left; }
+
+.float-right {
+  position: relative;
+  float: right; }
 
 /* img sizes */
 .icon-10 {
