--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3311,7 +3311,7 @@ h2, h3 {
   margin: 1.3 0 0.5em;
   line-height: 1.15em;
   font-family: 'Montserrat';
-  font-weight: 700;
+  font-weight: 800;
   width: 100%; }
 
 h4, h5, h6 {
@@ -3331,7 +3331,7 @@ h2 {
 
 h3 {
   font-size: 1.414em;
-  font-weight: 200; }
+  font-weight: 600; }
 
 h4 {
   font-size: 1.414em;
@@ -3387,6 +3387,15 @@ h5 {
     transition: all .5s ease-in-out;
     opacity: 1;
     font-weight: 600; }
+
+.nav {
+  position: absolute;
+  z-index: 10; }
+
+.block {
+  display: block !important;
+  position: relative;
+  z-index: 2; }
 
 a {
   -webkit-transition: all .5s ease-in-out;
@@ -3640,7 +3649,7 @@ input, textarea {
   -moz-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   -ms-box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
   box-shadow: 0px 15px 30px rgba(56, 59, 83, 0.1);
-  background: #fff; }
+  background: #ffffff; }
 
 .absolute {
   display: block;
@@ -3981,9 +3990,21 @@ i.material-icons {
   -webkit-transform: translateX(40%) translateY(10%) scale(1.75);
   transform: translateX(40%) translateY(10%) scale(1.75); }
 
-@media only screen and (max-width: 466px) {
+.hide-for-small {
+  display: block; }
+
+.show-for-small {
+  display: none !important; }
+
+@media only screen and (max-width: 780px) {
   h1 {
-    font-size: 3.7em; } }
+    font-size: 2.5em; }
+
+  .hide-for-small {
+    display: none !important; }
+
+  .show-for-small {
+    display: block !important; } }
 @media only screen and (max-width: 1024px) {
   .oversized {
     -webkit-transform: scale(1);
