--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3311,14 +3311,12 @@ h2, h3 {
   margin: 1.3 0 0.5em;
   line-height: 1.15em;
   font-family: 'Montserrat';
-  font-weight: 800;
-  width: 100%; }
+  font-weight: 800; }
 
 h4, h5, h6 {
   color: #383b53;
   margin: 1.3 0 0.5em;
-  line-height: 1.15em;
-  width: 100%; }
+  line-height: 1.15em; }
 
 h1 {
   color: #000000;
@@ -3330,7 +3328,7 @@ h2 {
   font-size: 2.5em; }
 
 h3 {
-  font-size: 1.414em;
+  font-size: 1.36em;
   font-weight: 600; }
 
 h4 {
@@ -3365,28 +3363,36 @@ h5 {
 #menu {
   list-style-type: none !important;
   position: fixed;
-  top: 20px;
+  top: 10px;
   left: 20px;
   z-index: 1000; }
-  #menu li a {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    font-size: 1em;
-    font-weight: 600;
-    line-height: 1.5em;
-    padding: 10px 20px;
-    color: #04080f;
-    opacity: .37; }
-  #menu li a:hover {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    color: #ff6acf;
-    opacity: 1; }
-  #menu li.active a {
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    opacity: 1;
-    font-weight: 600; }
+
+#menu-list {
+  list-style-type: none !important;
+  position: fixed;
+  top: 60px;
+  left: 20px;
+  z-index: 1000; }
+
+#menu li a, #menu-list li a {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  font-size: 1em;
+  font-weight: 600;
+  line-height: 1.5em;
+  padding: 10px 20px;
+  color: #04080f;
+  opacity: .37; }
+#menu li a:hover, #menu-list li a:hover {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  color: #ff6acf;
+  opacity: 1; }
+#menu li.active a, #menu-list li.active a {
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  opacity: 1;
+  font-weight: 600; }
 
 .nav {
   position: absolute;
@@ -3680,7 +3686,6 @@ i.sm-icon {
   font-size: 22px !important; }
 
 i.material-icons {
-  font-size: 36px !important;
   display: inline-block !important; }
 
 .opacity {
