--- a/assets/css/fullpage.css
+++ b/assets/css/fullpage.css
@@ -202,6 +202,7 @@ html.fp-enabled,
     font-size: 10px;
     text-transform: uppercase;
     font-family: 'Source Sans Pro', Open Sans, Helvetica, Arial, sans-serif;
+    font-weight: 600;
     white-space: nowrap;
     max-width: 220px;
     overflow: hidden;
@@ -215,6 +216,9 @@ html.fp-enabled,
     -webkit-transition: opacity 0.2s ease-in;
     transition: opacity 0.2s ease-in;
     width: auto;
+    background: rgba(255,255,255,0.4);
+    padding: 0 6px;
+    border-radius: 6px;
     opacity: 1;
 }
 #fp-nav ul li .fp-tooltip.fp-right {
