--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3242,8 +3242,8 @@
 body {
   font: 100% "Source Sans Pro", Open Sans, Helvetica, Arial, sans-serif;
   font-weight: 400;
-  font-size: 1.08em;
-  line-height: 1.4em;
+  font-size: 1em;
+  line-height: 1.5em;
   color: #383b53;
   background: #fff;
   margin: 0;
@@ -3293,7 +3293,7 @@ body {
 .bg-image-right {
   background-repeat: no-repeat;
   background-position: bottom right;
-  background-size: contain; }
+  background-size: cover; }
 
 .bg-image-left {
   background-repeat: no-repeat;
@@ -3309,7 +3309,7 @@ body {
 /* text and headers */
 h2, h3 {
   margin: 1.3 0 0.5em;
-  line-height: 1.15em;
+  line-height: 1.5em;
   font-family: 'Montserrat';
   font-weight: 800; }
 
@@ -3319,7 +3319,7 @@ h4, h5, h6 {
   line-height: 1.15em; }
 
 h1 {
-  color: #000000;
+  color: #383b53;
   font-size: 4em;
   line-height: 1.5em;
   font-family: 'Montserrat'; }
@@ -3661,11 +3661,17 @@ input, textarea {
   display: block;
   position: absolute; }
 
+.fixed {
+  position: fixed; }
+
 .relative {
   position: relative; }
 
 .inline {
   display: inline-block !important; }
+
+.hidden {
+  display: none; }
 
 .z-index {
   z-index: 10; }
@@ -3961,10 +3967,15 @@ i.material-icons {
   max-width: 700px;
   margin: 0 auto; }
 
+.md-max-width {
+  width: 91%;
+  max-width: 700px;
+  margin: 0 auto; }
+
 .max-width {
   width: 96%;
   max-width: 1100px;
-  margin: auto; }
+  margin: 0 auto; }
 
 .half-width {
   width: 50%;
@@ -4009,7 +4020,12 @@ i.material-icons {
     display: none !important; }
 
   .show-for-small {
-    display: block !important; } }
+    display: block !important; }
+
+  .bg-image-right {
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: cover; } }
 @media only screen and (max-width: 1024px) {
   .oversized {
     -webkit-transform: scale(1);
@@ -4024,7 +4040,7 @@ i.material-icons {
   .bg-image-right {
     background-repeat: no-repeat;
     background-position: bottom center;
-    background-size: 90%; }
+    background-size: cover; }
 
   .bg-image-left {
     background-repeat: no-repeat;
