--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -141,8 +141,8 @@ $xl: 160px;
 body {
     font: 100% $fonts;
     font-weight: 400;
-    font-size: 1.08em;
-    line-height: 1.4em;
+    font-size: 1em;
+    line-height: 1.5em;
     color: $primary;
     background: #fff;
     margin:0;
@@ -195,7 +195,7 @@ body {
 .bg-image-right {
     background-repeat: no-repeat;
     background-position: bottom right;
-    background-size: contain;
+    background-size: cover;
 }
 .bg-image-left {
     background-repeat: no-repeat;
@@ -212,7 +212,7 @@ body {
 /* text and headers */
 h2, h3 {
     margin: 1.3 0 0.5em;
-    line-height: 1.15em;
+    line-height: 1.5em;
     font-family: 'Montserrat';
     font-weight:800;
 }
@@ -222,7 +222,7 @@ h4, h5, h6, {
     line-height: 1.15em;
 }
 h1 {
-    color: $black;
+    color: $primary;
     font-size: 4em;
     line-height: 1.5em;
     font-family: 'Montserrat';
@@ -242,6 +242,7 @@ h5 {
   font-size: 1em;
   font-weight: 600;
 }
+
 .sm-text {
   font-size: 0.8em !important;
 }
@@ -515,11 +516,17 @@ opacity: 1; /* Firefox */
     display: block;
     position: absolute;
 }
+.fixed {
+    position: fixed;
+}
 .relative {
     position: relative;
 }
 .inline {
     display: inline-block !important;
+}
+.hidden {
+    display: none;
 }
 .z-index {
     z-index: 10;
@@ -808,10 +815,15 @@ i.material-icons {
     max-width:700px;
     margin: 0 auto;
 }
+.md-max-width{
+    width: 91%;
+    max-width:700px;
+    margin: 0 auto;
+}
 .max-width{
     width: 96%;
     max-width:1100px;
-    margin: auto;
+    margin: 0 auto;
 }
 .half-width {
 	width: 50%;
@@ -853,6 +865,11 @@ i.material-icons {
     .show-for-small {
         display: block !important;
     }
+    .bg-image-right {
+        background-repeat: no-repeat;
+        background-position: bottom center;
+        background-size: cover;
+    }
 }
 @media only screen and (max-width: 1024px) {
     .oversized {
@@ -868,7 +885,7 @@ i.material-icons {
     .bg-image-right {
         background-repeat: no-repeat;
         background-position: bottom center;
-        background-size: 90%;
+        background-size: cover;
     }
     .bg-image-left {
         background-repeat: no-repeat;
